uodated reference site

--- a/_posts/2020-03-28-VM_MM.md
+++ b/_posts/2020-03-28-VM_MM.md
@@ -129,6 +129,7 @@ One way to address this problem is to avoid doing things that have problems due 
 
 ---
 
-**Reference**  
+**Reference**
 
-[Dynamic Memory Allocation and Virtual Memory]: https://www.cprogramming.com/tutorial/virtual_memory_and_heaps.html
+[Dynamic Memory Allocation and Virtual Memory](https://www.cprogramming.com/tutorial/virtual_memory_and_heaps.html)
+
