--- a/_posts/2020-03-28-VM_MM.md
+++ b/_posts/2020-03-28-VM_MM.md
@@ -1,9 +1,9 @@
 ﻿---
 title: Virtual Memory and Memory Mapping
 date: 2020-03-28 20:58:53 +0800
-category:
-tags:
-excerpt:
+category: 计算机原理
+tags: [CSAPP, memory, operating system]
+excerpt: 
 ---
 
 Virtual memory was introduced in 1959. The main goal was to significantly simplify programming by abstracting the quirks of physical memory's hierarchy. Nowadays, virtual memory management is an essential component in almost every operating system's kernel. Today, I discuss the main concepts of virtual memory and its advantages.
