--- a/_posts/2020-03-23-ELF.md
+++ b/_posts/2020-03-23-ELF.md
@@ -18,7 +18,8 @@ ELF(Excutable and Linkable Format)文件有三种格式，
 ELF文件格式提供了两种视图，分别是：
 链接视图（被链接）：可重定位目标文件 (Relocatable object files) 
 执行视图（被执行）：可执行目标文件（Executable object files）  
-![两种视图](https://img-blog.csdn.net/20160521110158483)  
+![两种视图](https://s1.ax1x.com/2020/03/28/GAgho6.jpg)  
+
 链接视图是以节（section）为单位，执行视图是以段（segment）为单位。链接视图就是在链接时用到的视图，而执行视图则是在执行时用到的视图。上图左侧的视角是从链接来看的，右侧的视角是执行来看的。总个文件可以分为四个部分：
 - ELF header： 描述整个文件的组织。
 - Program Header Table: 描述文件中的各种segments，用来告诉系统如何创建进程映像的。
